# metor

./: .cursorrules  .env.example  .env.exapmle  .gitignore  AI_RULES.md  API_DOCS.md  ARCHITECTURE.md  AUDIT.md  CONTRIBUTE.md  LICENSE  README.md  package-lock.json  package.json  pyproject.toml  setup.py
.github/: copilot-instructions.md
.github/actions/python-quality/: action.yml
.github/workflows/: ci.yml  generate_api_docs.yml  release_wheel_bundles.yml
docs/: AGENTS.md  API.md  ARCHITECTURE.md  AUDIT.md  CONTRIBUTE.md  SETTINGS.md
metor/: address_book.py  chat.py  cli.py  config.py  contact.py  contacts.py  core.py  daemon.py  deamon.py  help.py  history.py  key.py  main.py  profile.py  settings.py  tor.py  utils.py
metor/core/: api.py  daemon.py  key.py  proxy.py  tor.py
metor/core/daemon/: __init__.py  crypto.py  engine.py  ipc.py  network.py  outbox.py
metor/data/: contact.py  history.py  message.py  messages.py  profile.py  settings.py  sql.py
metor/data/profile/: config.py  engine.py  models.py  paths.py
metor/ui/: chat.py  cli.py  help.py
metor/ui/chat/: __init__.py  command.py  engine.py  event.py  ipc.py  session.py
metor/ui/chat/renderer/: __init__.py  display.py  engine.py  formatter.py  input.py
metor/utils/: constants.py  helper.py  lock.py
scripts/: build_release_wheelhouse.py  generate_api_docs.py  generate_settings_docs.py
src/metor/: __init__.py  main.py
src/metor/application/: __init__.py
src/metor/application/runtime/: __init__.py  daemon.py  headless.py  maintenance.py
src/metor/core/: __init__.py  api.py  key.py  proxy.py  tor.py
src/metor/core/api/: __init__.py  base.py  codes.py  commands.py  events.py  registry.py
src/metor/core/daemon/: __init__.py  bootstrap.py  crypto.py  engine.py  headless.py  ipc.py  models.py  network.py  outbox.py
src/metor/data/: __init__.py  contact.py  history.py  message.py  settings.py  sql.py
src/metor/data/contact/: __init__.py  manager.py  models.py
src/metor/data/history/: __init__.py  codes.py  manager.py  models.py  projector.py
src/metor/data/message/: __init__.py  manager.py  models.py
src/metor/data/profile/: __init__.py  catalog.py  config.py  engine.py  lifecycle.py  manager.py  models.py  paths.py  support.py
src/metor/data/sql/: __init__.py  backends.py  history.py  manager.py  message.py  peer.py  runtime_mirror.py  schema.py
src/metor/ui/: __init__.py  help.py  models.py  presenter.py  prompt.py  session_auth.py  theme.py  translations.py
src/metor/ui/chat/: __init__.py  command.py  engine.py  event.py  (+4 more)
src/metor/utils/: __init__.py  auth.py  caster.py  constants.py  helper.py  lock.py  network.py  process.py  release_bundle.py  security.py  validators.py
tests/: test_application_runtime_contract.py  test_chat_contract.py  test_daemon_hardening.py  test_data_persistence_contract.py  test_history_contract.py  test_lock_contract.py  test_release_contract.py  test_security_contract.py  test_session_auth_contract.py  test_settings_contract.py  test_tor_path_resolution.py  test_ui_boundaries.py  test_ui_ipc_contract.py
(+147 files in other folders)
