[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "metor"
dynamic = ["version"]
description = "A Tor Messenger Framework."
authors = [{ name = "LuRex" }]
requires-python = ">=3.11"
license = { text = "GPLv3" }
dependencies = [
    "stem",
    "PySocks",
    "pynacl",
    "psutil",
    "python-dotenv",
    "sqlcipher3-binary",
]

[project.optional-dependencies]
dev = ["ruff>=0.3.0", "mypy>=1.9.0"]

[project.scripts]
metor = "metor.main:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
version = { attr = "metor.__version__" }

[tool.ruff]
line-length = 88

[tool.ruff.format]
quote-style = "single"

[tool.mypy]
strict = true
disallow_untyped_defs = true
disallow_any_generics = true
warn_return_any = true
