[build-system]
requires = ["setuptools==80.10.2", "wheel==0.46.3"]
build-backend = "setuptools.build_meta"

[project]
name = "metor"
dynamic = ["version"]
description = "A Tor Messenger Framework."
authors = [{ name = "LuRex" }]
requires-python = ">=3.11"
license = { text = "GPLv3" }
dependencies = [
    "stem==1.8.2",
    "PySocks==1.7.1",
    "pynacl==1.6.2",
    "psutil==7.2.2",
    "python-dotenv==1.2.2",
    "sqlcipher3==0.6.2",
]

[project.optional-dependencies]
dev = ["ruff==0.15.8", "mypy==1.19.1"]

[project.scripts]
metor = "metor.main:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
version = { attr = "metor.__version__" }

[tool.ruff]
line-length = 88

[tool.ruff.format]
quote-style = "single"

[tool.mypy]
strict = true
disallow_untyped_defs = true
disallow_any_generics = true
warn_return_any = true
